[project]
name = "pun"
version = "0.1.0"
description = "A Python Bundler"
authors = [{name = "dosisod"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
  "libcst >= 1.1.0"
]

[project.urls]
Source = "https://github.com/dosisod/pun"

[tool.setuptools]
packages = ["pun"]

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
color_output = true
known_first_party = ["test"]

[tool.mypy]
namespace_packages = true
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_unreachable = true
allow_redefinition = true
python_version = "3.10"

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "pragma: no cover",
  "assert False",
  "if TYPE_CHECKING",
]
skip_covered = true
skip_empty = true

[tool.black]
line-length = 99
color = true

[tool.pytest.ini_options]
addopts = "--cov=pun --cov-report=html --cov-report=term-missing --cov-fail-under=87 --disable-warnings"
asyncio_mode = "auto"
testpaths = ["test"]

[tool.ruff]
line-length = 99
preview = true
target-version = "py310"

select = ["ALL"]

extend-ignore = [
  "ANN002", "ANN003", "ANN101", "ANN102", "ANN202", "ANN401",
  "B011",
  "COM812",
  "CPY001",
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
  "D200", "D202", "D203", "D205", "D212",
  "D400", "D401", "D404", "D415",
  "FIX002", "FIX004",
  "PGH003",
  "PLR6301",
  "PT015",
  "S101",
  "TD002", "TD003",
]

[tool.ruff.per-file-ignores]
"test/*" = ["E501"]
"test/data/*" = ["ALL"]
"pun/main.py" = ["ARG002", "N802"]

[tool.typos.default.extend-words]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
